# BentoBoy

./: .gitignore  CMakeLists.txt  README.md
inc/: gb_isa.h  gb_opcodes.h  gb_video.h
src/: CMakeLists.txt  gb_isa.c  gb_opcodes.c  gb_video.c  main.c
test/: CMakeLists.txt  test-add16.c  test-dec.c  test-inc.c  test-ld16.c  test-ld8.c  test-pushpop.c
